--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     implementation group: 'info.movito', name: 'themoviedbapi', version:'1.7'
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation "org.jetbrains.anko:anko:$anko_version"
+    implementation 'com.squareup.picasso:picasso:2.71828'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
